// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingWrapper should display a loading bar when the loading prop is set to true 1`] = `
<div>
  <div
    class="cs-loader"
  >
    <div
      class="cs-loader-inner"
    >
      <label>
         ●
      </label>
      <label>
         ●
      </label>
      <label>
         ●
      </label>
    </div>
  </div>
</div>
`;

exports[`LoadingWrapper should render children when loading prop is set to false 1`] = `
<div>
  Simple text
</div>
`;

exports[`LoadingWrapper should render children when loading prop is set to false 2`] = `
<div>
  <p>
    Simple HTML
  </p>
</div>
`;

exports[`LoadingWrapper should render children when loading prop is set to false 3`] = `
<div>
  <h1>
    Multiple children
  </h1>
  <p>
    second child
  </p>
</div>
`;

exports[`LoadingWrapper should render children when loading prop is set to false 4`] = `<div />`;
